infra/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: kafka-schema-ui.dev
    http:
      paths:
      - backend:
          service:
            name: kafka-schema-registry-ui
            port:
              number: 8000
        path: /
        pathType: Prefix
  - host: kafka-schema.dev
    http:
      paths:
      - backend:
          service:
            name: kafka-schema-registry
            port:
              number: 8081
        path: /
        pathType: Prefix
  - host: kafka-ui.dev
    http:
      paths:
      - backend:
          service:
            name: kafka-ui
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: kafka-producer.dev
    http:
      paths:
      - backend:
          service:
            name: producer
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
